added additional pages and created new css files

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
         <!--Начало внутренного div shop-part-->
         <div class="hero__shop-part">
             <!--hero__link задает начальные свойства, hero_right - дает отступ направо-->
-            <a href="#" class="hero__link hero_right">Shop</a>
-            <a href="#" class="hero__link">The Boon Life</a>
+            <a href="./shop.html" class="hero__link hero_right">Shop</a>
+            <a href="./about.html" class="hero__link">The Boon Life</a>
             <!--hero__logo задает начальные свойства,
             внутренний span изменяет изначальные свойтва hero__logo слово "Market"-->
 
             <!--В hero__logo слово"B o o n " должен быть в таком порядке с пробелом после,
             дабы не нарушить структуру слова-->
-            <h2 class="hero__logo">B o o n <span class="hero__text-market">Market</span></h2>
+            <a class="hero__logo">B o o n <span class="hero__text-market">Market</span></a>
         </div>
     </div>
     <!--Контейнер-->
@@ -101,7 +101,8 @@
                     <!--Класс about__title задает начальные свойства -->
                     <h3 class="about__title">Good For You</h3>
                     <!--Класс about__desc задает начальные свойства -->
-                    <p class="about__desc">We feature clever, beautiful products that are zero-waste, non-GMO, and toxin-free.</p>
+                    <p class="about__desc">We feature clever, beautiful products that are zero-waste, non-GMO, and
+                        toxin-free.</p>
                 </div>
             </div>
             <div class="about__card">
@@ -110,16 +111,18 @@
                 </div>
                 <div class="about_sub_d-flex  d-flex_center_column">
                     <h3 class="about__title">Good For The Planet</h3>
-                    <p class="about__desc about__desc_change">Our zero-waste products and featured articles make it easy for anyone to make easy swaps with big environmental benefit.</p>
+                    <p class="about__desc about__desc_change">Our zero-waste products and featured articles make it easy
+                        for anyone to make easy swaps with big environmental benefit.</p>
                 </div>
-             </div>
+            </div>
             <div class="about__card ">
                 <div class="about__img">
                     <img src="./images/ab3.png" alt="image three">
                 </div>
                 <div class="about_sub_d-flex d-flex_center_column">
                     <h3 class="about__title about__title_change">Good For The Community</h3>
-                    <p class="about__desc about__desc_change">Each purchase made on Boon Market sends money to the cause of your choice.</p>
+                    <p class="about__desc about__desc_change">Each purchase made on Boon Market sends money to the cause
+                        of your choice.</p>
                 </div>
             </div>
         </div>
