added new section fresh

--- a/index.html
+++ b/index.html
@@ -216,6 +216,76 @@
         </div>
     </div>
 </section>
+<section class="fresh">
+    <div class="container">
+        <h2 class="fresh__fresh-title">What's Fresh</h2>
+        <div class="row fresh__col-6">
+            <div class="fresh col-6">
+                <div class="fresh__img-1">
+                    <img src="./images/fresh1.jpg" alt="">
+                </div>
+            </div>
+            <div class="col-6 fresh__col-6-right">
+                <button class="fresh__btn-collection">collection</button>
+                <h2 class="fresh__info-desc">Waste-Free Kitchen & Lunch</h2>
+                <p class="about__desc fresh__fresh-desc">Simple swaps with big environmental impact.</p>
+                <h3 class="fresh__shop fresh__shop-2">Shop Now</h3>
+            </div>
+        </div>
+    </div>
+</section>
+<!--Начало секции toxin-->
+<section class="toxin">
+    <div class="row toxin__col-6">
+        <div class="col-6 toxin__col-6-left">
+            <button class="fresh__btn-collection">collection</button>
+            <h2 class="fresh__info-desc">Toxin-Free Personal Care</h2>
+            <p class="about__desc fresh__fresh-desc">Simple swaps with big environmental impact.</p>
+            <h3 class="fresh__shop">Shop Now</h3>
+
+        </div>
+        <div class="col-6 toxin__col-6-right">
+            <div class="fresh__img-1">
+                <img src="./images/fresh2.png" alt="">
+            </div>
+        </div>
+    </div>
+</section>
+<!--Начало секции coffee-->
+<section class="coffee">
+    <div class="container">
+        <div class="row fresh__col-6">
+            <div class="fresh col-6">
+                <div class="fresh__img-1">
+                    <img src="./images/fresh3.png" alt="">
+                </div>
+            </div>
+            <div class="col-6 fresh__col-6-right">
+                <button class="fresh__btn-collection">collection</button>
+                <h2 class="fresh__info-desc">Coffee & Tea</h2>
+                <p class="about__desc fresh__fresh-desc">Give back every morning with your first sip.</p>
+                <h3 class="fresh__shop">Shop Now</h3>
+            </div>
+        </div>
+    </div>
+</section>
+<!--Начало секции celebraiting-->
+<section class="celebraiting">
+    <div class="container">
+        <div class="row fresh__col-6">
+            <div class="fresh col-6">
+                <div class="fresh__img-1">
+                    <img src="./images/fresh4.png" alt="">
+                </div>
+            </div>
+            <div class="col-6 fresh__col-6-right celebraiting__col-6-right">
+                <h2 class="fresh__info-desc">Celebrating Every Age</h2>
+                <p class="about__desc fresh__fresh-desc">Rachel Peters marketed big brands before the need for deodorant and personal care products for her preteens inspired her to start Clean Age alongside h...</p>
+                <h3 class="fresh__shop">read more</h3>
+            </div>
+        </div>
+    </div>
+</section>
 <!----> <!--Шаблон для комментариев-->
 </body>
 </html>
