--- a/index.html
+++ b/index.html
@@ -236,6 +236,7 @@
 </section>
 <!--Начало секции toxin-->
 <section class="toxin">
+    <div class="container">
     <div class="row toxin__col-6">
         <div class="col-6 toxin__col-6-left">
             <button class="fresh__btn-collection">collection</button>
@@ -249,6 +250,7 @@
                 <img src="./images/fresh2.png" alt="">
             </div>
         </div>
+    </div>
     </div>
 </section>
 <!--Начало секции coffee-->
