--- a/index.html
+++ b/index.html
@@ -37,9 +37,7 @@
             <!--Начало Навигационный бар, класс hero__nav задает начальные свойства -->
             <nav class="hero__nav">
                 <!--Ссылки в навигационный бар, класс hero__nav-link задает начальные свойства -->
-                <a href="#" class="hero__nav-link">Conscious Kitchen</a>
-                <a href="#" class="hero__nav-link">Conscious Pantry</a>
-                <a href="#" class="hero__nav-link">Eco Cleaning</a>
+                <a href="./navBar/ecoCleaning.html" class="hero__nav-link">Eco Cleaning</a>
                 <a href="#" class="hero__nav-link">Personal Care</a>
                 <a href="#" class="hero__nav-link">Bags & Totes</a>
                 <a href="#" class="hero__nav-link">Gifts</a>
@@ -48,7 +46,7 @@
             <!--Главный текст секции hero, класс hero__title задает начальные свойства-->
             <h1 class="hero__title">Shop Goods That Do Good</h1>
             <!--Кнопка секции hero-->
-            <button class="hero__btn">Shop now</button>
+            <a href="./shop.html"><button class="hero__btn">Shop now</button></a>
         </div>
         <!--Конец секции-->
         <!--Начало карточек, класс hero__cards задает position:absolut, ширину и внутр. отступ
