added new pages, feedback form in about.html, added hovers

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             <nav class="hero__nav">
                 <!--Ссылки в навигационный бар, класс hero__nav-link задает начальные свойства -->
                 <a href="./navBar/ecoCleaning.html" class="hero__nav-link">Eco Cleaning</a>
-                <a href="#" class="hero__nav-link">Personal Care</a>
-                <a href="#" class="hero__nav-link">Bags & Totes</a>
+                <a href="./navBar/personalCare.html" class="hero__nav-link">Personal Care</a>
+                <a href="./navBar/personalCare.html" class="hero__nav-link">Bags & Totes</a>
                 <a href="#" class="hero__nav-link">Gifts</a>
             </nav>
             <!--Конец нав. бар-->
@@ -227,7 +227,7 @@
                 <button class="fresh__btn-collection">collection</button>
                 <h2 class="fresh__info-desc">Waste-Free Kitchen & Lunch</h2>
                 <p class="about__desc fresh__fresh-desc">Simple swaps with big environmental impact.</p>
-                <h3 class="fresh__shop fresh__shop-2">Shop Now</h3>
+                <a href="./shop.html" class="fresh__shop fresh__shop-2">Shop Now</a>
             </div>
         </div>
     </div>
@@ -240,8 +240,7 @@
             <button class="fresh__btn-collection">collection</button>
             <h2 class="fresh__info-desc">Toxin-Free Personal Care</h2>
             <p class="about__desc fresh__fresh-desc">Simple swaps with big environmental impact.</p>
-            <h3 class="fresh__shop">Shop Now</h3>
-
+            <a href="./shop.html" class="fresh__shop">Shop Now</a>
         </div>
         <div class="col-6 toxin__col-6-right">
             <div class="fresh__img-1">
@@ -264,7 +263,7 @@
                 <button class="fresh__btn-collection">collection</button>
                 <h2 class="fresh__info-desc">Coffee & Tea</h2>
                 <p class="about__desc fresh__fresh-desc">Give back every morning with your first sip.</p>
-                <h3 class="fresh__shop">Shop Now</h3>
+                <a href="./shop.html" class="fresh__shop">Shop Now</a>
             </div>
         </div>
     </div>
@@ -281,7 +280,7 @@
             <div class="col-6 fresh__col-6-right celebraiting__col-6-right">
                 <h2 class="fresh__info-desc">Celebrating Every Age</h2>
                 <p class="about__desc fresh__fresh-desc">Rachel Peters marketed big brands before the need for deodorant and personal care products for her preteens inspired her to start Clean Age alongside h...</p>
-                <h3 class="fresh__shop">read more</h3>
+                <a href="./about.html" class="fresh__shop">read more</a>
             </div>
         </div>
     </div>
