--- a/about.html
+++ b/about.html
@@ -29,13 +29,13 @@
                 <!--Класс header__link-part задает начальные свойства -->
                 <div class="header__link-part">
                     <a href="./shop.html" class="hero__link hero_right">Shop</a>
-                    <a href="./about.html" class="hero__link">The Boon Life</a>
+                    <a href="./about.html" class="hero__link  hero__link_hover not_active">The Boon Life</a>
                 </div>
             </div>
             <nav class="hero__nav header__shop-part">
                 <!--Ссылки в навигационный бар, класс hero__nav-link задает начальные свойства, header__nav-link отступ -->
                 <a href="./navBar/ecoCleaning.html" class="hero__nav-link header__nav-link">Eco Cleaning</a>
-                <a href="#" class="hero__nav-link header__nav-link">Personal Care</a>
+                <a href="./navBar/personalCare.html" class="hero__nav-link header__nav-link">Personal Care</a>
                 <a href="#" class="hero__nav-link header__nav-link">Bags & Totes</a>
                 <a href="#" class="hero__nav-link header__nav-link">Gifts</a>
             </nav>
