added new pages: personal care, gifts, bags, and also new style css, still new section shop moon, boon latter

--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./style/style.css">
     <link rel="stylesheet" href="./style/reser.css">
     <link rel="stylesheet" href="./style/about.css">
-    <link rel="stylesheet"  href="style/slide/slide.css"/>
+    <link rel="stylesheet" href="style/slide/slide.css"/>
 </head>
 <body>
 
@@ -36,8 +36,8 @@
                 <!--Ссылки в навигационный бар, класс hero__nav-link задает начальные свойства, header__nav-link отступ -->
                 <a href="./navBar/ecoCleaning.html" class="hero__nav-link header__nav-link">Eco Cleaning</a>
                 <a href="./navBar/personalCare.html" class="hero__nav-link header__nav-link">Personal Care</a>
-                <a href="#" class="hero__nav-link header__nav-link">Bags & Totes</a>
-                <a href="#" class="hero__nav-link header__nav-link">Gifts</a>
+                <a href="./navBar/bags.html" class="hero__nav-link header__nav-link">Bags & Totes</a>
+                <a href="./navBar/gift.html" class="hero__nav-link header__nav-link">Gifts</a>
             </nav>
         </div>
     </div>
@@ -69,66 +69,69 @@
             <p class="about__desc about__desc_about">Давайте потреблять осознанно и с заботой о нашей планете </p>
         </div>
 
-    <div class="about__slider">
-        <div class="container">
-            <div id="content-slider">
-                <div id="slider">
-                    <div id="mask">
-                        <ul>
-                            <li id="first" class="firstanimation">
-                                <a href="https://www.gastronom.ru/product/limon-1399">
-                                    <img src="images/slide/img_1.jpg" alt="Limons"/>
-                                </a>
-                                <div class="tooltip">
-                                    <h1>Лимоны хорошие</h1>
-                                </div>
-                                    <p class="cool__text">Лимон очень полезен для здоровья, особенно, если это лимон баксов.</p>
-                            </li>
+        <div class="about__slider">
+            <div class="container">
+                <div id="content-slider">
+                    <div id="slider">
+                        <div id="mask">
+                            <ul>
+                                <li id="first" class="firstanimation">
+                                    <a href="https://www.gastronom.ru/product/limon-1399">
+                                        <img src="images/slide/img_1.jpg" alt="Limons"/>
+                                    </a>
+                                    <div class="tooltip">
+                                        <h1>Лимоны хорошие</h1>
+                                    </div>
+                                    <p class="cool__text">Лимон очень полезен для здоровья, особенно, если это лимон
+                                        баксов.</p>
+                                </li>
 
-                            <li id="second" class="secondanimation">
-                                <a href="https://alpinabook.ru/blog/zozh/">
-                                    <img src="images/slide/img_2.jpg" alt="ZOJ"/>
-                                </a>
-                                <div class="tooltip">
-                                    <h1>ЗОЖ — это тренд</h1>
-                                </div>
-                            </li>
+                                <li id="second" class="secondanimation">
+                                    <a href="https://alpinabook.ru/blog/zozh/">
+                                        <img src="images/slide/img_2.jpg" alt="ZOJ"/>
+                                    </a>
+                                    <div class="tooltip">
+                                        <h1>ЗОЖ — это тренд</h1>
+                                    </div>
+                                </li>
 
-                            <li id="third" class="thirdanimation">
-                                <a href="https://8signal.com/way-professional-website-diy-not-diy-question/">
-                                    <img src="images/slide/img_3.jpg" alt="DIY"/>
-                                </a>
-                                <div class="tooltip">
-                                    <h1>DIY - Do It Yourself</h1>
-                                </div>
-                            </li>
+                                <li id="third" class="thirdanimation">
+                                    <a href="https://8signal.com/way-professional-website-diy-not-diy-question/">
+                                        <img src="images/slide/img_3.jpg" alt="DIY"/>
+                                    </a>
+                                    <div class="tooltip">
+                                        <h1>DIY - Do It Yourself</h1>
+                                    </div>
+                                </li>
 
-                            <li id="fourth" class="fourthanimation">
-                                <a href="https://pikabu.ru/story/krasnaya_panda_samoe_ocharovatelnoe_zhivotnoe_zemli_4204857">
-                                    <img src="images/slide/img_4.jpg" alt="Howling"/>
-                                </a>
-                                <div class="tooltip">
-                                    <h1>Fire Panda</h1>
-                                </div>
-                            </li>
+                                <li id="fourth" class="fourthanimation">
+                                    <a href="https://pikabu.ru/story/krasnaya_panda_samoe_ocharovatelnoe_zhivotnoe_zemli_4204857">
+                                        <img src="images/slide/img_4.jpg" alt="Howling"/>
+                                    </a>
+                                    <div class="tooltip">
+                                        <h1>Fire Panda</h1>
+                                    </div>
+                                </li>
 
-                            <li id="fifth" class="fifthanimation">
-                                <a href="https://hotwalls.ru/zvezdy_v_galaktike-wallpapers.html">
-                                    <img src="images/slide/img_5.jpg" alt="Stars"/>
-                                </a>
-                                <div class="tooltip">
-                                    <h1>Stars</h1>
-                                </div>
-                            </li>
-                        </ul>
+                                <li id="fifth" class="fifthanimation">
+                                    <a href="https://hotwalls.ru/zvezdy_v_galaktike-wallpapers.html">
+                                        <img src="images/slide/img_5.jpg" alt="Stars"/>
+                                    </a>
+                                    <div class="tooltip">
+                                        <h1>Stars</h1>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="progress-bar"></div>
                     </div>
-                    <div class="progress-bar"></div>
                 </div>
             </div>
         </div>
     </div>
-    </div>
 </section>
-
+<div class="logo_team">
+    <a href="https://chat.whatsapp.com/GPS6ljrMCPc8BaTlVZukWc"><img src="./images/team_logo.png"  alt="team_logo"></a>
+</div>
 </body>
 </html>
