--- a/navBar/ecoCleaning.html
+++ b/navBar/ecoCleaning.html
@@ -37,8 +37,8 @@
                 <!--Ссылки в навигационный бар, класс hero__nav-link задает начальные свойства, header__nav-link отступ -->
                 <a href="#" class="hero__nav-link header__nav-link hero__link_hover not_active">Eco Cleaning</a>
                 <a href="../navBar/personalCare.html" class="hero__nav-link header__nav-link">Personal Care</a>
-                <a href="../navBar/personalCare.html" class="hero__nav-link header__nav-link">Bags & Totes</a>
-                <a href="#" class="hero__nav-link header__nav-link">Gifts</a>
+                <a href="../navBar/bags.html" class="hero__nav-link header__nav-link">Bags & Totes</a>
+                <a href="../navBar/gift.html" class="hero__nav-link header__nav-link">Gifts</a>
             </nav>
         </div>
     </div>
@@ -51,10 +51,13 @@
                 Эко-клининг появился относительно недавно. Главная цель – это использование экологически чистых
                 безвредных материалов для уборки, чтобы нанести минимальный вред человеку и окружающей среде.
                 Известно, что, проводя большую часть времени в помещении, хоть дома, хоть в офисе, человек
-                вдыхает один и тот же воздух, который после уборки может быть насыщен парами многочисленных химических веществ.
+                вдыхает один и тот же воздух, который после уборки может быть насыщен парами многочисленных химических
+                веществ.
             </p>
-            <p class="eco__title">  Большинство из них весьма вредны, основная масса современных чистящих средств используют
-                фосфаты и хлор, которые сами по себе весьма токсичны. Компании, которые предоставляют услуги эко-клининга,
+            <p class="eco__title"> Большинство из них весьма вредны, основная масса современных чистящих средств
+                используют
+                фосфаты и хлор, которые сами по себе весьма токсичны. Компании, которые предоставляют услуги
+                эко-клининга,
                 используют в своей работе только сертифицированные материалы.
                 В таком случае вы можете быть гарантированно уверены, что они не вызывают вреда не только для человека,
                 но и для внешней среды.
@@ -69,12 +72,14 @@
             </p>
             <p class="eco__title">
                 Так, например, есть компании, которые утверждают, что используют исключительно воду при уборке и
-                салфетки из микрофибры. Стоит отметить, что одной водой качественно и полноценно уборку все же не сделаешь,
+                салфетки из микрофибры. Стоит отметить, что одной водой качественно и полноценно уборку все же не
+                сделаешь,
                 а салфетки такого типа изготавливаются из полиамида и полиэстера, которые весьма сложно утилизировать,
                 и они являются весьма вредным материалом для экологии в целом.
             </p>
             <p class="eco__title">
-                Некоторые компании также в качестве фишки используют натуральные средства в виде уксуса или лимонного сока.
+                Некоторые компании также в качестве фишки используют натуральные средства в виде уксуса или лимонного
+                сока.
                 Их эффективность весьма спорна, а вот возможность появления аллергии у кого-то из сотрудников офиса,
                 где они провели уборку – весьма реальна. Как известно цитрусовые являются весьма сильным аллергеном.
                 Также утоняйте используют ли компании в своей работе пребиотики.
@@ -122,5 +127,8 @@
         </div>
     </div>
 </section>
+<div class="logo_team">
+    <a href="https://chat.whatsapp.com/GPS6ljrMCPc8BaTlVZukWc"><img src="./images/team_logo.png"  alt="team_logo"></a>
+</div>
 </body>
 </html>
