--- a/shop.html
+++ b/shop.html
@@ -35,8 +35,8 @@
                 <!--Ссылки в навигационный бар, класс hero__nav-link задает начальные свойства, header__nav-link отступ -->
                 <a href="./navBar/ecoCleaning.html" class="hero__nav-link header__nav-link">Eco Cleaning</a>
                 <a href="./navBar/personalCare.html" class="hero__nav-link header__nav-link">Personal Care</a>
-                <a href="#" class="hero__nav-link header__nav-link">Bags & Totes</a>
-                <a href="#" class="hero__nav-link header__nav-link">Gifts</a>
+                <a href="./navBar/bags.html" class="hero__nav-link header__nav-link">Bags & Totes</a>
+                <a href="./navBar/gift.html" class="hero__nav-link header__nav-link">Gifts</a>
             </nav>
         </div>
     </div>
@@ -236,8 +236,9 @@
         </div>
     </div>
 </section>
-<footer class="sub_footer">
 
-</footer>
+<div class="logo_team">
+    <a href="https://chat.whatsapp.com/GPS6ljrMCPc8BaTlVZukWc"><img src="./images/team_logo.png"  alt="team_logo"></a>
+</div>
 </body>
 </html>
