--- a/navBar/personalCare.html
+++ b/navBar/personalCare.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
     <link rel="stylesheet" href="../style/style.css">
     <link rel="stylesheet" href="../style/reser.css">
+    <link rel="stylesheet" href="../style/subPage/eco.css">
 </head>
 <body>
 
@@ -36,16 +37,51 @@
             <nav class="hero__nav header__shop-part">
                 <!--Ссылки в навигационный бар, класс hero__nav-link задает начальные свойства, header__nav-link отступ -->
                 <a href="../navBar/ecoCleaning.html" class="hero__nav-link header__nav-link">Eco Cleaning</a>
-                <a href="#" class="hero__nav-link header__nav-link hero__link_hover not_active">Personal Care</a>
-                <a href="#" class="hero__nav-link header__nav-link">Bags & Totes</a>
-                <a href="#" class="hero__nav-link header__nav-link">Gifts</a>
+                <a href="../navBar/personalCare.html"
+                   class="hero__nav-link header__nav-link hero__link_hover not_active">Personal Care</a>
+                <a href="../navBar/bags.html" class="hero__nav-link header__nav-link">Bags & Totes</a>
+                <a href="../navBar/gift.html" class="hero__nav-link header__nav-link">Gifts</a>
             </nav>
         </div>
     </div>
 </header>
 
 <section class="care">
-
+    <div class="container">
+        <p class="eco__title">Ли́чная гигиéна (индивидуáльная) — раздел гигиены,
+            в котором изучают вопросы сохранения и укрепления здоровья человека, соблюдения гигиенических правил и
+            мероприятий в личной жизни и деятельности, разрабатывают и проводят мероприятия гигиенического воспитания,
+            пропаганду гигиенических знаний и здорового образа жизни с целью повышения гигиенической культуры. </p>
+        <p class="eco__title">
+            В неё входят вопросы гигиенического содержания тела кожи, волос, ногтей, зубов), обуви, одежды, жилища,
+            правил рационального питания, закаливания организма и физической культуры.
+            При этом некоторыми вопросами личной гигиены также занимается сексология (личная гигиена половых органов,
+            гигиены половой жизни) и гигиена труда (личная гигиена работников при трудовой деятельности)
+        </p>
+        <p class="eco__title">В более широком понимании личная гигиена — это поведение человека, направленное на
+            гигиеническое содержание тела (кожи, волос, ногтей, зубов), обуви и одежды, жилища, закаливание организма.
+            Является неотъемлемой частью здорового образа жизни.</p>
+    </div>
 </section>
+<section class="toxin">
+    <div class="container">
+        <div class="row toxin__col-6">
+            <div class="col-6 toxin__col-6-left">
+                <button class="fresh__btn-collection">коллекция</button>
+                <h2 class="fresh__info-desc">Личная гигиена без токсинов</h2>
+                <p class="about__desc fresh__fresh-desc">Без воздействия на окружащую среду</p>
+                <a href="../shop.html" class="fresh__shop">Купить сейчас</a>
+            </div>
+            <div class="col-6 toxin__col-6-right">
+                <div class="fresh__img-1">
+                    <img src="../images/fresh2.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<div class="logo_team">
+    <a href="https://chat.whatsapp.com/GPS6ljrMCPc8BaTlVZukWc"><img src="./images/team_logo.png"  alt="team_logo"></a>
+</div>
 </body>
 </html>
